<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_green_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_rated"
            android:icon="@drawable/ic_star_green_24dp"
            android:title="@string/nav_rated" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_green_24dp"
            android:title="@string/nav_profile" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_green_24dp"
            android:title="@string/nav_share" />

        <item
            android:id="@+id/nav_need_help"
            android:icon="@drawable/ic_help_green_24dp"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_green_24dp"
            android:title="@string/nav_sign" />
    </group>

</menu>