<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:paddingTop="35dp"
        android:paddingBottom="35dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_userpic"
            android:layout_marginRight="40dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User name"
            android:layout_gravity="center_vertical"
            android:textColor="@color/windowsbackground"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="55dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_now"
        android:id="@+id/email"
        android:hint="@string/emaill"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_email"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="55dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_now"
        android:id="@+id/name"
        android:hint="@string/user"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_person"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="55dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_now"
        android:id="@+id/number"
        android:hint="+91 987 654 3210"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_phone"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        android:inputType="number"
        />




</LinearLayout>