<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/action_bar"
        android:theme="@style/AppTheme.AppBarOverlay">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="45dp"
            android:src="@drawable/ic_15" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/action_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/sign_up_now"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_weight="30"
            android:layout_gravity="center_vertical"

            ></View>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:layout_weight="40"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_weight="30"
            android:layout_gravity="center_vertical"
            ></View>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_now"
        android:id="@+id/email"
        android:hint="@string/email"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_email"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:id="@+id/name"
        android:hint="@string/name"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_person"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_phone"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        android:inputType="phone"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:id="@+id/create"
        android:hint="@string/create_pass"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_lock"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create"
        android:id="@+id/confirm"
        android:hint="@string/confirm_pass"
        android:background="@drawable/email_etxt_bkgrnd"
        android:drawableLeft="@drawable/selector_lock"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:drawablePadding="20dp"
        android:textSize="12dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm"
        android:text="@string/sign_up_now"
        android:id="@+id/sign_up_button"
        android:background="@drawable/button_bkgrnd"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/sign_up_button"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have"
            android:textStyle="bold"
            android:layout_marginRight="3dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:id="@+id/sign_in"
            android:textStyle="bold"/>


    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"></View>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>