<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starter"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Aloo and Dal ki Tikki \nCheese Balls \nChicken Satay \nBhuna Masala Chicken Wings"
        android:lineSpacingExtra="2.5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/main"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Tofu and Veggies in Peanut Sauce \nCheese Balls \nChicken Satay \nBhuna Masala Chicken Wings"
        android:lineSpacingExtra="2.5dp"/>

    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/sandwich"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Aloo and Dal ki Tikki \nCheese Balls \nChicken Satay \nBhuna Masala Chicken Wings"
        android:lineSpacingExtra="2.5dp"/>
    />

</LinearLayout>
    </android.support.v4.widget.NestedScrollView>